# blueprint

./: .gitignore
blueprint/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  FIRST_COMMIT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  RUNNING_GUIDE.md  __init__.py  main.py  pyproject.toml  test_imports.py
blueprint/controllers/: __init__.py
blueprint/models/: __init__.py  drawing.py  line.py
blueprint/tests/: __init__.py  test_controllers.py  test_drawing.py  test_file_io.py  test_integration.py  test_line.py
blueprint/utils/: __init__.py  constants.py  file_io.py  serialization.py
blueprint/views/: __init__.py  drawing_area.py  main_window.py  toolbox.py
